--- a/grupo1gestortickets.client/src/Components/Login/Login.css
+++ b/grupo1gestortickets.client/src/Components/Login/Login.css
@@ -1,7 +1,76 @@
-function Login() {
-  return (
-    <p>Hello world!</p>
-  );
+@import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=REM:ital,wght@0,100..900;1,100..900&display=swap');
+
+.login-container {
+    font-family: "Barlow", sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50vh;
+    width: 70vh;
+    background-color: #E4E4E4;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
 }
 
-export default Login;
+.titulologin {
+    font-family: "Barlow", sans-serif;
+    margin-bottom: 10%;
+    font-weight: bold;
+}
+
+.login-form-container {
+    width: 90%;
+    background-color: #CECECE;
+    padding: 40px;
+    border-radius: 5px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+}
+
+.login-form {
+    align-items: flex-start;
+    display: flex;
+    flex-direction: column;
+}
+
+.login-form div {
+    margin-bottom: 15px;
+}
+
+.login-form label {
+    margin-right: 10px;
+    margin-bottom: 10px;
+    font-weight: bold;
+}
+
+.login-form input {
+    width: 100%; 
+    padding: 10px;
+    border: 1px solid #CCCCCC;
+    border-radius: 10px;
+    font-size: 16px;
+    background-color: #FFFFFF; 
+    color: #000000; 
+    margin-bottom: 20px;
+}
+
+.login-form button {
+    width: 50%; 
+    background-color: #FDDD00;
+    color: #000;
+    padding: 10px;
+    border: none;
+    border-radius: 15px;
+    font-size: 16px;
+    cursor: pointer;
+    margin: 0 auto;
+    display: block;
+    margin-top: 10%;
+}
+
+.login-form button:hover {
+    background-color: #e6c600;
+}
+
+.error-message {
+    color: red;
+    font-weight: bold;
+}
