Aplicando estilo a Inicio admin, Inicio Cliente.

--- a/grupo1gestortickets.client/src/Components/InicioAdmin/InicioAdmin.css
+++ b/grupo1gestortickets.client/src/Components/InicioAdmin/InicioAdmin.css
@@ -1,6 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=REM:ital,wght@0,100..900;1,100..900&display=swap');
+
+.container-ticket {
+   font-family: "Barlow", sans-serif;
+}
+
 :root {
-  --tamanio-margen: 25px;
-  --altura-minima: 50px;
+    --tamanio-margen: 25px;
+    --altura-minima: 50px;
 }
 
 .tickets-abiertos {
@@ -36,6 +42,7 @@
 }
 
 .titulo {
+  margin-bottom: 5%;
   font-weight: bold;
 }
 
@@ -51,4 +58,31 @@
 
 a {
   color: white !important;
+}
+
+.ticket-left {
+    display: flex;
+    float: left;
+    margin-top: 10%;
+    margin-bottom: 5%;
+}
+
+.custom-row-width {
+    width: 110%;
+    position: relative;
+    left: 50%;
+    right: 50%;
+    transform: translateX(-50%);
+}
+
+@media (min-width: 576px) {
+    .custom-row-width {
+        width: 110%;
+    }
+}
+
+@media (min-width: 768px) {
+    .custom-row-width {
+        width: 110%;
+    }
 }
