--- a/grupo1gestortickets.client/src/Components/PantallaCliente/Agregar/Agregar.css
+++ b/grupo1gestortickets.client/src/Components/PantallaCliente/Agregar/Agregar.css
@@ -1,7 +1,85 @@
-function Agregar() {
-  return (
-    <p>Hello world!</p>
-  );
+@import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=REM:ital,wght@0,100..900;1,100..900&display=swap');
+
+.container-create-ticket {
+    font-family: "Barlow", sans-serif;
+    max-width: 250vh;
+    max-height: 250vh;
 }
 
-export default Agregar;
+.custom-form {
+    margin-top: 20px;
+    background-color: #E4E4E4;
+    height: 95vh;
+    width: 110vh;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+    align-items: center;
+}
+
+.titulo-text {
+    align-items: center;
+    font-size: 25px;
+    margin-top: 10%;
+    margin-bottom: 4%;
+    color: black;
+    font-weight: bold;
+    letter-spacing: 2px;
+}
+
+.form-label-create-ticket {
+    display: flex;
+    margin-top: 25px;
+}
+
+.custom-form-container .form-group {
+    margin-bottom: 1.5rem;
+}
+
+.custom-form-container .card {
+    margin-bottom: 1.5rem;
+}
+
+.custom-form-container .btn {
+    margin-top: 3rem;
+}
+
+.custom-form-container .btn-danger {
+    margin-left: 0.1rem;
+}
+
+.custom-form-comments-container {
+    max-height: 400px;
+    overflow-y: auto; 
+}
+
+.btnguardar {
+    background-color: #FDDD00;
+    border: none;
+    font-weight: bold;
+    color: black;
+    border-radius: 20px;
+    height: 40px;
+    width: 30%;
+    margin-bottom: 20px;
+    margin-top: 10%;
+}
+
+.btnguardar:hover {
+    background-color: #e6c600;
+    font-weight: bold;
+    color: white;
+}
+
+@media (max-width: 768px) {
+    .custom-form-container .row > div {
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
+}
+
+@media (max-height: 968px) {
+    .custom-form-container .row > div {
+        flex: 0 0 300%;
+        max-height: 300%;
+    }
+}
