estilo en agregar ticket

--- a/grupo1gestortickets.client/src/Components/PantallaCliente/DetalleTicket/DetalleTicket.css
+++ b/grupo1gestortickets.client/src/Components/PantallaCliente/DetalleTicket/DetalleTicket.css
@@ -162,7 +162,7 @@
 }
 
 .card-header-uno {
-    background-color: #C44557;
+    background-color: #842C2B;
     color: white;
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
