--- a/grupo1gestortickets.client/src/Components/PantallaCliente/Agregar/Agregar.css
+++ b/grupo1gestortickets.client/src/Components/PantallaCliente/Agregar/Agregar.css
@@ -2,42 +2,58 @@
 
 .container-create-ticket {
     font-family: "Barlow", sans-serif;
+    background-color: #842C2B;
     max-width: 250vh;
     max-height: 250vh;
     width: 150vh;
-    height: 150vh;
+    height: 160vh;
     overflow: auto;
+    margin-top: 5%;
 }
 
 .custom-form {
     margin-top: 20px;
-    background-color: #E4E4E4;
-    width: 130vh;
+    background-color: #842C2B;
+    color: white;
+    width: 80%;
+    max-width: 1000px;
     border-radius: 10px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
-    align-items: center;
-    overflow: auto;
     padding: 20px;
+    overflow: auto;
 }
 
-.titulo-text {
+.form-fondo {
+    background-color: #000000;
+    background-image: linear-gradient(to right, rgba(255, 255, 255, 0.1) 1px, transparent 1px), linear-gradient(to bottom, rgba(255, 255, 255, 0.1) 1px, transparent 1px);
+    background-size: 10px 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 1);
+    padding: 25px;
+}
+
+
+.second-container-fondo {
+    height: 100vh;
+}
+
+.titulo-text-create {
     align-items: center;
     font-size: 25px;
-    margin-top: 7%;
-    margin-bottom: 2%;
-    color: black;
+    margin-top: 3%;
+    margin-bottom: 4%;
+    color: white;
     font-weight: bold;
     letter-spacing: 2px;
 }
 
 .titulo-text-arch {
     border: 2px dashed #000000;
-    background-color: black;
+    background-color: #000000;
     align-items: center;
-    font-size: 15px;
-    margin-top: 8%;
+    font-size: 17px;
+    margin-top: 2%;
     color: white;
     font-weight: bold;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 2);
 }
 
 .form-label-create-ticket {
@@ -51,6 +67,7 @@
 
 .custom-form .card {
     margin-bottom: 1.5rem;
+
 }
 
 .custom-form .btn {
@@ -62,21 +79,26 @@
 }
 
 .custom-form-comments-container {
-    background-color: #FCDCAD;
+    height: 100vh;
+    background-color: #2E2E2E;
     height: 50vh;
     max-height: 400px;
     overflow-y: auto;
     padding: 5%;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+    background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.1) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.1) 50%, rgba(255, 255, 255, 0.1) 75%, transparent 75%, transparent);
+    background-size: 10px 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 2);
+
 }
 
 .custom-form-file-container {
-    background-color: #FCDCAD;
+    background-color: #2E2E2E;
     height: 30vh;
     max-height: 400px;
+    width: auto;
     overflow-x: auto;
     padding: 5%;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.4);
 }
 
 .btnguardar {
@@ -110,13 +132,16 @@
 }
 
 .btn-add-comment {
-    background-color: #797979;
+    background-color: #BB500F;
     border: none;
-    font-weight: bold;
+    font-size: 17px;
     color: white;
     height: 40px;
-    width: 40%;
-    margin-bottom: 8px;
+    width: 30%;
+}
+
+.btn-add-comment:hover {
+    background-color: #D8B595;
 }
 
 @media (max-width: 768px) {
