--- a/grupo1gestortickets.client/src/Components/PantallaCliente/InicioCliente/InicioCliente.css
+++ b/grupo1gestortickets.client/src/Components/PantallaCliente/InicioCliente/InicioCliente.css
@@ -1,7 +1,79 @@
-function InicioCliente() {
-  return (
-    <p>Hello world!</p>
-  );
+@import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=REM:ital,wght@0,100..900;1,100..900&display=swap');
+
+
+/* TicketsTable */
+.tickets-container {
+    font-family: "Barlow", sans-serif;
+    overflow: hidden;
+    display: flex;
+    justify-content: space-between;
+    max-width: 100%;
+    margin: 0 auto;
 }
 
-export default InicioCliente;
+.titulo-text-estadistica {
+    align-items: center;
+    font-size: 25px;
+    margin-top: 7%;
+    margin-bottom: 2%;
+    color: black;
+    font-weight: bold;
+    letter-spacing: 2px;
+}
+
+.size {
+    font-size: 20px;
+}
+
+
+.size-letra{
+    font-size: 15px;
+}
+
+.size-letra-td {
+    font-size: 10px;
+}
+
+.chart-container {
+    width: 50%;
+    float: left;
+    margin-right: 10%;
+}
+
+.table-container {
+    width: 100%;
+    float: right;
+}
+
+th, td {
+    width: 300px;
+    max-width: 400px;
+}
+
+.add-button-cliente {
+    margin-top: 5%;
+    float: right;
+    background-color: #FDDD00;
+    color: black;
+    border: none;
+    width: 20%;
+    font-weight: bold;
+    border-radius: 15px;
+}
+
+.add-button-cliente:hover {
+    background-color: #e6c600;
+    color: white;
+}
+
+@media (max-width: 768px) {
+    .tickets-container {
+        flex-direction: column;
+    }
+
+    .chart-container,
+    .table-container {
+        flex: 1 1 100%;
+        margin-right: 0;
+    }
+}
