--- a/grupo1gestortickets.client/src/Components/AdminRegisUser/RegistrarCliente.css
+++ b/grupo1gestortickets.client/src/Components/AdminRegisUser/RegistrarCliente.css
@@ -7,16 +7,19 @@
     justify-content: center;
     align-items: center;
     height: 90vh;
-    width: 90vh;
-    background-color: #E4E4E4;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+    width: 100vh;
+    background-color: #F4DB73;
+    background-image: radial-gradient(circle, rgba(255, 255, 255, 0.1) 20%, transparent 20%), radial-gradient(circle, rgba(255, 255, 255, 0.1) 20%, transparent 20%);
+    background-size: 30px 30px;
+    background-position: 0 0, 15px 15px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+    padding: 25px;
 }
 
 .recliente-container {
-    background-color: #d3d3d3;
+    background-color: #F4DB73;
     padding: 20px;
     border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     max-width: 500px;
     margin: 0 auto;
 }
@@ -47,8 +50,8 @@
 
 .recliente-button {
     width: 50%;
-    background-color: #FDDD00;
-    color: #000;
+    background-color: #FF8062;
+    color: #fff;
     padding: 10px;
     border: none;
     border-radius: 15px;
@@ -61,9 +64,10 @@
     margin-right: 10px;
 }
 
-.recliente-button:hover {
-    background-color: #e6c600;
-}
+    .recliente-button:hover {
+        background-color: #FFB3A1;
+        color: black;
+    }
 
 .recliente-button.ml-2 {
     width: 50%;
@@ -82,5 +86,5 @@
 }
 
 .recliente-button + .recliente-button {
-  margin-left: 8px; /* Ajusta el espaciado según tu necesidad */
+  margin-left: 8px; 
 }
