--- a/grupo1gestortickets.client/src/Components/AdminRegisUser/RegistrarEmpleado.css
+++ b/grupo1gestortickets.client/src/Components/AdminRegisUser/RegistrarEmpleado.css
@@ -6,17 +6,20 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 90vh;
-    width: 90vh;
-    background-color: #E4E4E4;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+    height: 95vh;
+    width: 95vh;
+    background-color: #d3d3d3;
+    background-image: radial-gradient(circle, rgba(255, 255, 255, 0.1) 20%, transparent 20%), radial-gradient(circle, rgba(255, 255, 255, 0.1) 20%, transparent 20%);
+    background-size: 30px 30px;
+    background-position: 0 0, 15px 15px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+    padding: 25px;
 }
 
 .reempleado-container {
     background-color: #d3d3d3;
     padding: 20px;
     border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     max-width: 500px;
     margin: 0 auto;
 }
@@ -40,15 +43,15 @@
     margin-bottom: 10px;
 }
 
-.button-container {
+.button-container-empleado {
     display: flex;
     justify-content: flex-start;
 }
 
 .reempleado-button {
     width: 50%;
-    background-color: #FDDD00;
-    color: #000;
+    background-color: #FF8062;
+    color: #fff;
     padding: 10px;
     border: none;
     border-radius: 15px;
@@ -61,26 +64,27 @@
     margin-right: 10px;
 }
 
-    .reempleado-button:hover {
-        background-color: #e6c600;
-    }
+.reempleado-button:hover {
+    background-color: #FFB3A1;
+    color: black;
+}
 
-    .reempleado-button.ml-2 {
-        width: 50%;
-        background-color: #6F6F6F;
-        color: white;
-        padding: 10px;
-        border: none;
-        border-radius: 15px;
-        font-size: 16px;
-        cursor: pointer;
-        margin: 0 auto;
-        display: block;
-        margin-top: 10%;
-        font-weight: bold;
-        margin-left: 8px;
-    }
+.reempleado-button.ml-2 {
+    width: 50%;
+    background-color: #6F6F6F;
+    color: white;
+    padding: 10px;
+    border: none;
+    border-radius: 15px;
+    font-size: 16px;
+    cursor: pointer;
+    margin: 0 auto;
+    display: block;
+    margin-top: 10%;
+    font-weight: bold;
+    margin-left: 8px;
+ }
 
-    .reempleado-button + .reempleado-button {
-        margin-left: 8px; /* Ajusta el espaciado según tu necesidad */
-    }
+.reempleado-button + .reempleado-button {
+    margin-left: 8px;
+}
