--- a/grupo1gestortickets.client/src/Components/PantallaCliente/Agregar/Agregar.css
+++ b/grupo1gestortickets.client/src/Components/PantallaCliente/Agregar/Agregar.css
@@ -2,30 +2,58 @@
 
 .container-create-ticket {
     font-family: "Barlow", sans-serif;
+    background-color: #842C2B;
     max-width: 250vh;
     max-height: 250vh;
     width: 150vh;
-    height: 150vh;
+    height: 160vh;
+    overflow: auto;
+    margin-top: 5%;
 }
 
 .custom-form {
     margin-top: 20px;
-    background-color: #E4E4E4;
-    height: 95vh;
-    width: 130vh;
+    background-color: #842C2B;
+    color: white;
+    width: 80%;
+    max-width: 1000px;
     border-radius: 10px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
-    align-items: center;
+    padding: 20px;
+    overflow: auto;
 }
 
-.titulo-text {
+.form-fondo {
+    background-color: #000000;
+    background-image: linear-gradient(to right, rgba(255, 255, 255, 0.1) 1px, transparent 1px), linear-gradient(to bottom, rgba(255, 255, 255, 0.1) 1px, transparent 1px);
+    background-size: 10px 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 1);
+    padding: 25px;
+}
+
+
+.second-container-fondo {
+    height: 100vh;
+}
+
+.titulo-text-create {
     align-items: center;
     font-size: 25px;
-    margin-top: 7%;
-    margin-bottom: 2%;
-    color: black;
+    margin-top: 3%;
+    margin-bottom: 4%;
+    color: white;
     font-weight: bold;
     letter-spacing: 2px;
+}
+
+.titulo-text-arch {
+    border: 2px dashed #000000;
+    background-color: #000000;
+    align-items: center;
+    font-size: 17px;
+    margin-top: 2%;
+    color: white;
+    font-weight: bold;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 2);
 }
 
 .form-label-create-ticket {
@@ -39,6 +67,7 @@
 
 .custom-form .card {
     margin-bottom: 1.5rem;
+
 }
 
 .custom-form .btn {
@@ -50,8 +79,26 @@
 }
 
 .custom-form-comments-container {
+    height: 100vh;
+    background-color: #2E2E2E;
+    height: 50vh;
     max-height: 400px;
-    overflow-y: auto; 
+    overflow-y: auto;
+    padding: 5%;
+    background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.1) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.1) 50%, rgba(255, 255, 255, 0.1) 75%, transparent 75%, transparent);
+    background-size: 10px 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 2);
+
+}
+
+.custom-form-file-container {
+    background-color: #2E2E2E;
+    height: 30vh;
+    max-height: 400px;
+    width: auto;
+    overflow-x: auto;
+    padding: 5%;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.4);
 }
 
 .btnguardar {
@@ -62,8 +109,13 @@
     border-radius: 20px;
     height: 40px;
     width: 20%;
-    margin-bottom: 20px;
-    margin-top: 10%;
+    margin: 10px auto;
+}
+
+
+.align-items-start {
+    display: flex;
+    justify-content: flex-end;
 }
 
 .btnguardar:hover {
@@ -72,16 +124,29 @@
     color: white;
 }
 
+
+
+.btn-add-container {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.btn-add-comment {
+    background-color: #BB500F;
+    border: none;
+    font-size: 17px;
+    color: white;
+    height: 40px;
+    width: 30%;
+}
+
+.btn-add-comment:hover {
+    background-color: #D8B595;
+}
+
 @media (max-width: 768px) {
     .custom-form-container .row > div {
         flex: 0 0 200%;
         max-width: 200%;
-    }
-}
-
-@media (max-height: 968px) {
-    .custom-form-container .row > div {
-        flex: 0 0 300%;
-        max-height: 300%;
     }
 }
