--- a/grupo1gestortickets.client/src/Components/AdminRegisUser/RegistrarUsuarios.css
+++ b/grupo1gestortickets.client/src/Components/AdminRegisUser/RegistrarUsuarios.css
@@ -8,7 +8,7 @@
 .btn-usuarios {
     padding: 10px 20px;
     font-size: 16px;
-    background-color: #f0ad4e; 
+    background-color: #603303;
     border: none;
     border-radius: 5px;
     color: #fff;
