--- a/grupo1gestortickets.client/src/Components/Login/Login.css
+++ b/grupo1gestortickets.client/src/Components/Login/Login.css
@@ -15,6 +15,7 @@
     font-family: "Barlow", sans-serif;
     margin-bottom: 10%;
     font-weight: bold;
+    letter-spacing: 2px;
 }
 
 .login-form-container {
@@ -68,6 +69,7 @@
 
 .login-form button:hover {
     background-color: #e6c600;
+    color: white;
 }
 
 .error-message {
