--- a/grupo1gestortickets.client/src/Components/PantallaCliente/DetalleTicket/DetalleTicket.css
+++ b/grupo1gestortickets.client/src/Components/PantallaCliente/DetalleTicket/DetalleTicket.css
@@ -1,13 +1,26 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=REM:ital,wght@0,100..900;1,100..900&display=swap');
 
+.container-detalle-primero {
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+    height: 100%;
+    margin-top: 30%;
+    margin: 70px;
+}
 
 .custom-ticket-container {
     font-family: "Barlow", sans-serif;
-    padding: 20px;
-
+    padding: 10px;
     background-color: #f9f9f9;
     border-radius: 8px;
+    margin-top: 30%;
+    width: 250%;
+    max-width: 1500px;
+    box-sizing: border-box;
+    margin: auto;
 }
+
 
 .custom-print-button {
     margin-bottom: 20px;
@@ -44,7 +57,7 @@
 .comments-style {
     border: 4px dashed #000000;
     border-radius: 20px;
-    margin-bottom: 25%;
+    margin-bottom: 10%;
     height: 70vh;
 }
 
@@ -64,7 +77,7 @@
 
 .custom-comment-input {
     flex: 1;
-    margin-right: 10px;
+    margin-right: 20px;
 }
 
 .custom-comment-button {
