--- a/grupo1gestortickets.client/src/Components/PantallaCliente/InicioCliente/InicioCliente.css
+++ b/grupo1gestortickets.client/src/Components/PantallaCliente/InicioCliente/InicioCliente.css
@@ -19,6 +19,16 @@
     letter-spacing: 2px;
 }
 
+.titulo-text-mis-ticket {
+    align-items: center;
+    font-size: 25px;
+    margin-top: 8%;
+    margin-bottom: 3%;
+    color: black;
+    font-weight: bold;
+    letter-spacing: 2px;
+}
+
 .search-bar {
     background-color: #f8f9fa;
     border: 1px solid #ced4da;
@@ -44,9 +54,6 @@
     font-size: 20px;
 }
 
-.size-letra{
-    font-size: 18px;
-}
 
 .size-letra-td {
     font-size: 18px;
